# internal/controller/grpc/spacet_handler.go
@@ -2,7 +2,6 @@ package grpc
 
 import (
 	"context"
-	"fmt"
 	gen "spacet/gen/proto/go"
 	v1 "spacet/gen/proto/go"
 	"spacet/internal/app"
@@ -19,6 +18,7 @@ type SpaceTHandler struct {
 	l                logger.Interface
 	protoValidator   *protovalidate.Validator
 	bookingsCommands app.BookingsServiceCommands
+	bookingsQueries  app.BookingsServiceQueries
 }
 
 func (h SpaceTHandler) LaunchBooking(ctx context.Context, req *v1.BookingRequest) (*v1.Ticket, error) {
@@ -35,11 +35,13 @@ func (h SpaceTHandler) LaunchBooking(ctx context.Context, req *v1.BookingRequest
 		Gender:      domain.Gender(req.GetGender().String()),
 	})
 	return &v1.Ticket{
-		Id:          ticket.ID.String(),
-		FirstName:   ticket.FirstName,
-		LastName:    ticket.LastName,
-		LaunchpadId: ticket.LaunchPadID,
-		LaunchDate:  timestamppb.New(ticket.LaunchDate),
+		Id:            ticket.ID.String(),
+		FirstName:     ticket.FirstName,
+		LastName:      ticket.LastName,
+		LaunchpadId:   ticket.LaunchPadID,
+		LaunchDate:    timestamppb.New(ticket.LaunchDate),
+		DestinationId: v1.Destination(v1.Destination_value[ticket.Destination]),
+		Status:        ticket.Status,
 	}, err
 }
 
@@ -50,10 +52,41 @@ func (h SpaceTHandler) CancelBooking(ctx context.Context, req *v1.TicketID) (*v1
 	return req, h.bookingsCommands.CancelByID(ctx, req.Id)
 }
 
-func (h SpaceTHandler) ListBookings(ctx context.Context, req *v1.ListBookingsRequest) (*v1.ListBookingsResponse, error) {
+func (h SpaceTHandler) ListBookings(ctx context.Context, req *v1.ListTicketsRequest) (*v1.ListTicketsResponse, error) {
+	if req == nil {
+		return nil, domain.ErrEmptyRequest
+	}
 	if err := h.protoValidator.Validate(req); err != nil {
 		return nil, err
 	}
-	// todo-
-	return nil, fmt.Errorf("not implemented yet")
+	var resp = &gen.ListTicketsResponse{}
+	ticketsList, nextCursor, err := h.bookingsQueries.ListTickets(ctx,
+		bookings.ListTicketsRequest{
+			Cursor: req.GetCursor(),
+			Limit:  req.GetLimit(),
+			Filters: domain.TicketSearchFilters{
+				FirstName:   req.FirstName,
+				LastName:    req.LastName,
+				Destination: req.Destination,
+				Status:      req.Status,
+				LaunchPadID: req.LaunchpadId,
+			},
+		})
+	if err != nil {
+		return resp, err
+	}
+	resp.NextCursor = nextCursor
+	resp.Tickets = make([]*v1.Ticket, 0, len(ticketsList))
+	for _, ticket := range ticketsList {
+		resp.Tickets = append(resp.Tickets, &v1.Ticket{
+			Id:            ticket.ID.String(),
+			FirstName:     ticket.FirstName,
+			LastName:      ticket.LastName,
+			LaunchDate:    timestamppb.New(ticket.LaunchDate),
+			LaunchpadId:   ticket.LaunchPadID,
+			DestinationId: v1.Destination(v1.Destination_value[ticket.Destination]),
+			Status:        ticket.Status,
+		})
+	}
+	return resp, nil
 }
